# red-salud

./: .env.example  .gitignore  .npmrc  .syncpackrc.json  .vercelignore  ARQUITECTURA-HIBRIDA.md  CHANGELOG.md  CLAUDE.md  CONFIGURACION-VERCEL-PASO-A-PASO.md  DEPLOYMENT-SUCCESS.md  Funcionalidades Software Dental_ Guía Completa.md  HOTFIX_CHAT_RLS_RECURSION.md  MANIFESTO.md  MIGRACION_PNPM.md  PLAN_REORGANIZACION.md  README.md  REESTRUCTURACION-PROYECTO.md  REORGANIZACION_PROGRESO.md  SOLUCION-ERROR-404.md  VARIABLES-ENTORNO.md  build_output.txt  diagnostico-dns.ps1  eslint.config.js  lint_errors.txt  lint_output.txt  middleware.ts  next.config.ts  nx.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup-cloudflare-dns.md  tailwind.config.ts  tmpclaude-c929-cwd  tsconfig.base.json  tsconfig.json  vercel.json
app/: globals.css  (+1 more)
services/: Cargo.toml
services/academy/: Cargo.toml  Dockerfile
services/appointments/: Cargo.toml  Dockerfile
services/auth/: Cargo.toml  Dockerfile
services/bcv-rate/: package.json
services/billing/: Cargo.toml  Dockerfile
services/emergency/: Cargo.toml  Dockerfile
services/gateway/: Cargo.toml  Dockerfile  README.md
services/insurance/: Cargo.toml  Dockerfile
services/laboratory/: Cargo.toml  Dockerfile
services/medical-records/: Cargo.toml  Dockerfile
services/messaging/: Cargo.toml  Dockerfile
services/pharmacy/: Cargo.toml  Dockerfile
services/rif-verification/: package.json
services/sacs-verification/: .dockerignore  .env.example  Dockerfile  index.js  package-lock.json  package.json
(+3410 files in other folders)
