[workspace]
resolver = "2"
members = [
    "gateway",
    "auth",
    "pharmacy",
    "appointments",
    "medical-records",
    "laboratory",
    "insurance",
    "messaging",
    "billing",
    "emergency",
    "verification",
    "academy",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"
repository = "https://github.com/red-salud/red-salud"

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "auth"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
